Ninja: Add new API call to retrieve all data types of stations
It does no longer matter, if the associated measurements are open or closed
data. We consider all data types and their metadata open data from now on.

This breaks the API v2 specification, but we decided that in this early phase
it is OK.
